--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; URL='https://5ge57p2qet.app.youware.com/'" />
-  <title>Redirecting...</title>
+  <meta charset="UTF-8">
+  <title>luhar alakas App</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <p>If you are not redirected, <a href="https://5ge57p2qet.app.youware.com/">click here</a>.</p>
+  <iframe src="https://5ge57p2qet.app.youware.com/"></iframe>
 </body>
 </html>
